--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pong",
   "version": "1.0.0",
   "description": "learning HTML Canvas",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "express": "^4.17.1"
   },
